# telegram-korean-search

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.ko.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  prompt.md  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
FocusIntents/: FocusIntents.entitlements
Telegram-Mac/: AccountContext.swift  AppDelegate.swift  CallBridge.mm  FastSettings.swift  GoogleService-Info.plist  Info.plist  MainViewController.swift  SearchController.swift  Telegram-Mac.entitlements  Telegram-Sandbox.entitlements
Telegram-Mac/Seoyu/: SeoyuBridge.swift  SeoyuIngestObserver.swift
Telegram-Mac/Seoyu/Wiki/: MarkdownRenderer.swift  WikiArticleViewController.swift  WikiCategoryChipsView.swift  WikiDigestCardView.swift  WikiListViewController.swift  WikiLocale.swift  WikiObserverBridge.swift  WikiSourceCellView.swift  WikiTabController.swift
Telegram.xcodeproj/: project.pbxproj
TelegramShare/: Info.plist  TelegramShare.entitlements
configurations/: Alpha.xcconfig  Beta.xcconfig  Stable.xcconfig
core-xprojects/ffmpeg/ffmpeg/: build.sh
core-xprojects/webrtc/webrtc/: build.sh
docs/: SQLCIPHER-TRIGRAM-BLOCKER.md  XCODE26-BLOCKER.md  architecture.md  handoff.md
docs/legacy/: 2026-04-06-wiki-feature-design.md  2026-04-06-wiki-feature.md  README.md  tdlib-port-abandoned.md
docs/plans/: 2026-04-23-wiki-panel-ui.md  2026-04-23-wiki-worker-autostart.md  2026-04-25-plan-0-swift-delete-observer.md  2026-05-02-phase-6-classify-worker-v2.md
docs/specs/: 2026-04-23-wiki-panel-design.md  2026-04-23-wiki-side-panel.md  2026-04-24-reindex-and-wiki-v2-design.md  2026-04-27-cloud-wiki-architecture.md
scripts/: build-dev.sh  build-seoyu-xcframework.sh  fix-shallow-frameworks.sh  ld-cryptex-shim.sh  patch-submodules.sh
sidecar/: Cargo.toml  build.rs
sidecar/src/: error.rs  lib.rs  uniffi_api.rs
sidecar/src/ipc/: codec.rs  handlers.rs  mod.rs  protocol.rs  server.rs
sidecar/src/search/: engine.rs  hangul.rs  highlight.rs  mod.rs
sidecar/src/security/: crypto.rs  keychain.rs  mod.rs
sidecar/src/store/: app_meta.rs  chat.rs  message.rs  mod.rs  schema.rs  wiki_category.rs  wiki_page.rs  wiki_queue.rs  wiki_settings.rs  wiki_stats.rs  wiki_topic.rs
sidecar/src/wiki/: llm.rs  mod.rs  norm.rs  trending.rs  worker.rs
sidecar/tests/: ipc_roundtrip.rs  uniffi_surface.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/collector/: auth.rs  link.rs  messages.rs  mod.rs
src-tauri/src/indexer/: mod.rs  ngram.rs  tokenizer.rs
src-tauri/src/search/: engine.rs  mod.rs
src-tauri/src/store/: app_meta.rs  chat.rs  index_store.rs  message.rs  mod.rs  schema.rs  sync_state.rs  wiki_category.rs  wiki_page.rs  wiki_stats.rs  wiki_topic.rs
src-tauri/src/wiki/: llm.rs  worker.rs
src/api/: tauri.ts
src/components/: ChannelSelector.tsx  MessageModal.tsx  ResultItem.tsx  ResultList.tsx  SearchBar.tsx  TabBar.tsx
src/components/wiki/: CategoryFilter.tsx  SourceMessages.tsx  TopicCard.tsx  TrendingDashboard.tsx  (+3 more)
src/hooks/: useAuth.ts  useInfiniteScroll.ts  useSearch.ts  useWiki.ts  useWikiWorker.ts
src/pages/: LoginPage.tsx  SearchPage.tsx  WikiPage.tsx
src/types/: index.ts
src/utils/: format.ts  highlight.ts  markdown.ts
submodules/BuildConfig/: Package.swift
submodules/Mozjpeg/: Package.swift
submodules/Stripe/: Package.swift
submodules/Zip/: Package.swift
submodules/libwebp/: Package.swift
submodules/minizip/: Package.swift
