[package]
name = "telegram-seoyu-sidecar"
version = "0.0.1"
edition = "2021"
description = "Korean search + wiki sidecar for telegram-seoyu"
license = "MIT"

[[bin]]
name = "tg-seoyu-sidecar"
path = "src/bin/main.rs"

[lib]
name = "seoyu"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite = "0.37"
dirs = "6"
log = "0.4"
env_logger = "0.11"
flexi_logger = "0.29"
aes-gcm = "0.10"
security-framework = "3"
rand = "0.8"
zeroize = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
