[package]
name = "telegram-korean-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "telegram_korean_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
