[package]
name = "telegram-korean-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "telegram_korean_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
aes-gcm = "0.10"
security-framework = "3"
rand = "0.8"
zeroize = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
