[package]
name = "telegram-korean-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "telegram_korean_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite = "0.37"
dirs = "6"
log = "0.4"
env_logger = "0.11"
aes-gcm = "0.10"
security-framework = "3"
rand = "0.8"
zeroize = "1"
grammers-client = "0.8"
grammers-mtsender = "0.8"
grammers-session = "0.8"
grammers-tl-types = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
flexi_logger = "0.29"
tauri-plugin-shell = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
